@@ -284,7 +284,7 @@ namespace KJS {
     /**
      * Const character at specified position.
      */
-    const UChar operator[](int pos) const;
+    UChar operator[](int pos) const;
 
     /**
      * Attempts an conversion to a number. Apart from floating point numbers,
