@@ -93,7 +93,7 @@ public:
     {
     }
 
-    const UChar operator[](int i) const { return m_characters[i]; }
+    UChar operator[](int i) const { return m_characters[i]; }
     const UChar* data(int i) const { return &m_characters[i]; }
 
     const UChar* characters() const { return m_characters; }
