@@ -52,7 +52,7 @@ namespace WebCore {
         const KURL& url() const;
         void setURL(const KURL& url);
 
-        const ResourceRequestCachePolicy cachePolicy() const;
+        ResourceRequestCachePolicy cachePolicy() const;
         void setCachePolicy(ResourceRequestCachePolicy cachePolicy);
         
         double timeoutInterval() const;
