@@ -1,3 +1,9 @@
+2008-04-11  Mark Rowe  <mrowe@apple.com>
+
+        Rubber-stamped by Antti Koivisto.
+
+        * GNUmakefile.am: Disable a warning that GCC 4.3 triggers all over the show.
+
 2008-04-17  Alp Toker  <alp@atoker.com>
 
         GTK+ build fix. Back out the libjpeg check part of r32008 from bug
